# payment-gateway

./: .gitignore  .pylintrc  README.md  pyproject.toml
scripts/: run_api.bash  utils.bash
src/: main.py  setup.py
src/database/: tables.py
src/database/repositories/: base.py  transactions.py
src/database/repositories/transactions/: __init__.py  transactions.py
src/dependencies/: database.py  lifespan.py
src/domain/: controllers.py
src/domain/providers/: routers.py
src/domain/transactions/: routers.py  schemas.py
src/domain/transactions/routers/: __init__.py  routers_command.py  routers_query.py
src/domain/transactions/schemas/: __init__.py  base.py  request_schemas.py  response_schemas.py
src/domain/transactions/service/: __init__.py  transaction_command.py  transaction_querie.py
src/domain/transactions/services/: transaction_base.py  transaction_command.py  transaction_query.py
src/utils/: main.py  validators.py
