[tool.poetry]
name = "gateway-payments"
version = "0.1.0"
description = ""
authors = ["Emerson Silva"]
license = "MIT 1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlmodel = "^0.0.24"
aiomysql = "^0.2.0"
python-dotenv = "^1.1.1"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint]
init-hook='sys.path.append("src")'
